[package]
name = "egglogTest"
version = "0.1.0"
edition = "2021"

[dependencies]
egglog = "=0.4.0"
egraph-serialize = "0.2.0"
env_logger = { version = "0.10.0", default-features = false }
indexmap = "2.0.0"
log = "0.4.19"
ordered-float = "3"
pico-args = { version = "0.5.0", features = ["eq-separator"] }
rand = "0.8.5"
walkdir = "2.4.0"
anyhow = "1.0.71"
coin_cbc = { version = "0.1.6", optional = true }
im-rc = "15.1.0"
rustc-hash = "1.1.0"
serde_json = "1.0"
rpds = "1.1.0"